- Changes in the CPL methods, and adaptation of the algorithms to that. - Added algorithm for IP over WDM version of the ones we have in WDM for flexigrid. Pending the same with the IPL and test - Passes the existing tests. Pending mulitple algorithms tests.